Update_SignIn_SignUp_Page

--- a/orbit-vc-api/orbit-vc-api/appsettings.json
+++ b/orbit-vc-api/orbit-vc-api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=YOUR_SERVER;Database=OrbitVC;User Id=YOUR_USER;Password=YOUR_PASSWORD;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=WGN-009-530\\SQLEXPRESS2022;Database=OrbitVC;Trusted_Connection=True;TrustServerCertificate=True;",
+    "LogsDirectory": "Logs"
   },
   "Logging": {
     "LogLevel": {
