--- a/orbit-vc-api/orbit-vc-api/appsettings.json
+++ b/orbit-vc-api/orbit-vc-api/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=WGN-009-530\\SQLEXPRESS2022;Database=OrbitVC;Trusted_Connection=True;TrustServerCertificate=True;",
+    "DefaultConnection": "Server=WGN-009-530\\SQLEXPRESS2022;Database=OrbitVC;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "AppSettings": {
     "LogsDirectory": "Logs"
   },
   "Logging": {
