--- a/orbit-vc-api/orbit-vc-api/appsettings.json
+++ b/orbit-vc-api/orbit-vc-api/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=WGN-009-530\\SQLEXPRESS2022;Database=OrbitVC;Trusted_Connection=True;TrustServerCertificate=True;"
   },
+  "StoredFilesPath": "C:\\Users\\thanthtet.myet\\Documents\\01_Willowglen\\B_001_Workplace\\OrbitVC\\orbit-vc-api\\orbit-vc-api\\Resources",
   "AppSettings": {
     "LogsDirectory": "Logs"
   },
